Fix sharing user layout on mobile

--- a/webui/index.html
+++ b/webui/index.html
@@ -114,9 +114,8 @@
 
 			<!-- SPEED/TIME -->
 			<div id="InfoBlock">
-				<div href="#" onclick="LimitDialog.showModal()" title="Current speed (click to set speed limit)"><i class="icon-plane" id="StatusSpeedIcon"></i> <span id="StatusSpeed">--- KB/s</span></div>
+				<div href="#" onclick="LimitDialog.showModal()" title="Current speed (click to set speed limit)"><i class="icon-plane" id="StatusSpeedIcon"></i> <span id="StatusSpeed">--- KB/s</span> <i class="icon-user" id="StatusSharingUserIcon"></i><span id="StatusSharingUser"></span></div>
 				<div href="#" onclick="Status.statDialogClick()" title="Remaining time (click for more statistics)"><i class="icon-time" id="StatusTimeIcon"></i> <span id="StatusTime">--h --m</span></div>
-                               <div href="#" title="Sharing User"><i class="icon-user" id="StatusSharingUserIcon"></i><span id="StatusSharingUser"></span></div>
 			</div>
 
 			<!-- REFRESH MENU -->
