Fix up the icon for user

--- a/webui/index.html
+++ b/webui/index.html
@@ -123,8 +123,10 @@
 			    </span>
 			  </div>
 			  <div>
-			    <i class="icon-user" id="StatusSharingUserIcon"></i>
-			    <span href="#" title="Current user" id="StatusSharingUser"></span>
+			    <span>
+			      <i class="icon-user" id="StatusSharingUserIcon"></i>
+			      <span href="#" title="Current user" id="StatusSharingUser"></span>
+			    </span>
 			  </div>
 			</div>
 
