added confirmation dialog for command "Download again" in history list
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1254 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -1960,10 +1960,10 @@
 	<div id="HistoryEditRedownloadConfirmDialog_Title">History</div>
 	<div id="HistoryEditRedownloadConfirmDialog_Text">
 		<p>
-		Download this nzb again?
+		Download selected nzbs again?
 		</p>
 		<p class="confirm-help-block">
-		All downloaded files will be deleted and the nzb-file will be downloaded again from scratch.
+		All downloaded files will be deleted and the nzbs will be downloaded again from scratch.
 		</p>
 	</div>
 	<div id="HistoryEditRedownloadConfirmDialog_OK">Download Again</div>
