integrated unit testing framework; created few first unit tests for: command line parser, options parser, rss feed filter, par-checker/repairer and par-renamer; new configure parameter "--enable-tests" to build the program with tests; use "nzbget --tests" to execute all tests or "nzbget --tests -h" for more options
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1304 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -663,6 +663,14 @@
 
 		<h1>Information about included libraries</h1>
 
+		<h2>Par2</h2>
+		<p>NZBGet uses <a href="http://parchive.sourceforge.net">Par2</a> by Peter Brian Clements with library interface by Francois Lesueur.</p>
+		<p>Par2 is licensed under the <a href="http://github.com/jquery/jquery/blob/master/GPL-LICENSE.txt">GPL license</a>.</p>
+
+		<h2>Catch</h2>
+		<p>NZBGet uses C++ testing framework <a href="https://github.com/philsquared/Catch">Catch</a>  by Two Blue Cubes Ltd.</p>
+		<p>Catch is licensed under the <a href="http://www.boost.org/LICENSE_1_0.txt">Boost Software License</a>.</p>
+
 		<h2>jQuery</h2>
 		<p>NZBGet web-interface uses <a href="http://jquery.com">jQuery</a>. The jQuery Project is run by a distributed group of volunteers that all want to see jQuery become the best JavaScript tool possible.</p>
 		<p>jQuery is licensed under the <a href="http://github.com/jquery/jquery/blob/master/MIT-LICENSE.txt">MIT</a> and <a href="http://github.com/jquery/jquery/blob/master/GPL-LICENSE.txt">GPL</a> licenses.</p>
